--- a/sources/odoo.conf
+++ b/sources/odoo.conf
@@ -108,7 +108,7 @@ db_port = False
 ; the PostgreSQL connection role Odoo will use to connect to its databases
 db_user = pg
 db_password = THIS-IS-NOT-USED-DONOT-CHANGE
-addons_path = /opt/odoo/sources/odoo/addons,/opt/odoo/additional_addons
+addons_path = /opt/odoo/addons/CE_inherited,/opt/odoo/addons/enterprise,/opt/odoo/addons/ENT_inherit,/opt/odoo/addons/external,/opt/odoo/addons/nonfree,/opt/odoo/addons/private,/opt/odoo/sources/odoo/addons
 
 ; additionnal parmameter for version 8+
 data_dir = /opt/odoo/data
