Mise à jour fonctionnel
Suppression de la référence à Odoo entreprise.
Mise à jour de références à la version 18.04 de Ubuntu

--- a/sources/odoo.conf
+++ b/sources/odoo.conf
@@ -22,7 +22,7 @@ unaccent = True
 ; These options are really important and depend on the type of
 ; deployment you want to have so read the doc carefully and
 ; set these values accordingly
-workers = 0
+workers = 3
 max_cron_threads = 2
 limit_memory_hard = 2147483648
 limit_memory_soft = 671088640
@@ -34,7 +34,7 @@ limit_time_real = 180
 ; Below options are less critical but you are welcome to tweak them
 ; -----------------------------------------------------------------
 
-csv_internal_sep = ,
+csv_internal_sep = ;
 
 debug_mode = False
 demo = {}
@@ -108,7 +108,7 @@ db_port = False
 ; the PostgreSQL connection role Odoo will use to connect to its databases
 db_user = pg
 db_password = THIS-IS-NOT-USED-DONOT-CHANGE
-addons_path = /opt/odoo/addons/CE_inherited,/opt/odoo/addons/enterprise,/opt/odoo/addons/ENT_inherit,/opt/odoo/addons/external,/opt/odoo/addons/nonfree,/opt/odoo/addons/private,/opt/odoo/sources/odoo/addons
+addons_path = /opt/odoo/addons/CE_inherited,/opt/odoo/addons/external,/opt/odoo/addons/nonfree,/opt/odoo/addons/private,/opt/odoo/sources/odoo/addons
 
 ; additionnal parmameter for version 8+
 data_dir = /opt/odoo/data
